# tosco

./: AUTHORS  ChangeLog  INDEX  InstallRays2.md  Makefile.am  ProjectHome.md  README  S88Modeling.md  TODO  configure.ac  dbuild.sh  gebr-su-install.sh  tosco-su-install  tosco-su-unpack
cropcoher/: Makefile.am  README  TODO  configure.ac
cropcoher/gebr/: Makefile.am  cropcoher.mnu
cropcoher/src/: Makefile.am  cropcoher.c
mcdec/: AUTHORS  Makefile.am  README  TODO  configure.ac
mcdec/gebr/: Makefile.am  install-menus  mcdec.mnu
mcdec/menu/: Makefile.am  mcdec.mnu
mcdec/src/: Makefile.am  header.h  main.c  mcdec.f90
optspline/: Makefile.am  README  TODO  configure.ac
optspline/gebr/: Makefile.am  optspline.mnu
optspline/menu/: Makefile.am  optspline.mnu
optspline/src/: Makefile.am  cmdline.c  cmdline.h  optsp.c  optsp.h  optspline.c  optspline.ggo  optspline.h  splined.c  splined.h
optspline/src/tests/: Makefile.am  xoptsp  xoptsp-1  xoptsp-2  xoptsp-3  xoptsp-4  xoptsp-5  xoptsp-6  xoptsp-7
rays2/: AUTHORS  Makefile.am  README  TODO  configure.ac
rays2/gebr/: Makefile.am  install-menus  rays2.mnu
rays2/menu/: Makefile.am  rays2.mnu
rays2/src/: Makefile.am  cmdline.c  cmdline.h  libagr.c  libagr.h  rays2.c  rays2.ggo  rays2.h  spline.c  spline.h
rpm/: tosco.spec
s88modeling/: ChangeLog  Makefile.am  README  TODO  configure.ac
s88modeling/gebr/: Makefile.am  s88modeling.mnu
s88modeling/menu/: Makefile.am  s88modeling.mnu
s88modeling/src/: Makefile.am  libagr.c  libagr.h  lu.c  lu.h  parser.c  parser.h  s88.c  s88.h  s88modeling.c  spline.c  spline.h
seis88/: AUTHORS  Makefile.am  README  TODO  configure.ac
seis88/src/: Makefile.am  border.f  calcops.f  calcops.inc  modis.f  modsp.f  polar.f  ray.f  raypl.f  seis.f  seispl.f  serv.f  smooth.f  source.f  syntpl.f  syntplcr.f
su/: AUTHORS  Makefile.in  README  TODO  configure  su-download  su-install  su-make  su-patch
su/debian/: changelog  control  copyright  dirs  install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
su/tools/: check_su_files
sugeom/: AUTHORS  Makefile.am  README  TODO  configure.ac
sugeom/gebr/: Makefile.am  geomtables.mnu  sugeom.mnu
sugeom/src/: Makefile.am  geomtables.c  parser.c  parser.h  sugeom.c
suktmig2d-offset/: AUTHORS  Makefile.am  README  TODO  configure.ac
suktmig2d-offset/gebr/: Makefile.am  install-menus  suktmig2d-offset.mnu
suktmig2d-offset/src/: Makefile.am  build-test-data  suktmig2d-offset.c  test-suktmig2d-offset
suxkill/: AUTHORS  Makefile.am  README  TODO  configure.ac
suxkill/doc/: tutorial_suxkill.doc
suxkill/gebr/: Makefile.am  suxkill.mnu
suxkill/src/: Makefile.am  suxkill.c
suxmute/: AUTHORS  Makefile.am  README  TODO  configure.ac
suxmute/gebr/: Makefile.am  suxmute.mnu
suxmute/src/: Makefile.am  suxmute.c
velan-cmp/: AUTHORS  Makefile.am  README  TODO  configure.ac
velan-cmp/gebr/: Makefile.am  velan-cmp.mnu
velan-cmp/src/: Makefile.am  suxwigbyn.c  test-velan-cmp  velan-cmp  xwigbyn.c
