# S88modeling - Seismic modeler by rays theory
# Copyright (C) 2009 Ricardo Biloti <biloti@ime.unicamp.br>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS=s88modeling
s88modeling_SOURCES=s88modeling.c \
		    parser.c      \
                    parser.h      \
	            s88.c         \
                    s88.h         \
		    libagr.c      \
		    libagr.h      \
		    lu.c          \
		    lu.h          \
		    spline.c      \
		    spline.h      \
		    config.h
